--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  path_provider: ^2.0.11
   url_launcher: ^6.1.6
 
 dev_dependencies:
