--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.5
   open_file: ^3.2.1
   path_provider: ^2.0.11
+  video_player: ^2.4.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
