--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -20,15 +20,24 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "master"
-      - name: Set up Flutter
-        run: flutter pub get
+      - name: Set up
+        run: |
+          flutter pub get
+          sudo apt-get install rar
       - name: Build with Flutter
-        run: flutter build apk
+        run: |
+          flutter build apk
+          flutter build windows
       - name: Add version to APK
-        run: mv "build/app/outputs/flutter-apk/app-release.apk" pyacine-tv-${{ env.RELEASE_VERSION }}.apk
-      - name: Publish release APK
+        run: mv "build/app/outputs/flutter-apk/app-release.apk" pyacine-tv-apk-${{ env.RELEASE_VERSION }}.apk
+      - name: Create Archive
+        run: rar a -r pyacine-tv-windows-${{ env.RELEASE_VERSION }}.rar "build/windows/runner/Release/"
+      - name: Publish
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: ${{ env.RELEASE_VERSION }}
           prerelease: false
-          files: pyacine-tv-${{ env.RELEASE_VERSION }}.apk
+          files: |
+            pyacine-tv-apk-${{ env.RELEASE_VERSION }}.apk
+            pyacine-tv-windows-${{ env.RELEASE_VERSION }}.rar
